package lowleveldesign.bloomfilter;

public enum HashType {
    FNV1A,
    DJB2
}
